umbrello/umlmodel/folder.cpp
@@ -376,8 +376,9 @@ void UMLFolder::saveToXMI(QDomDocument& qDoc, QDomElement& qElement)
  * Auxiliary to load():
  * Load the diagrams from the "diagrams" in the <XMI.extension>
  */
-bool UMLFolder::loadDiagramsFromXMI(QDomNode& diagrams)
+bool UMLFolder::loadDiagramsFromXMI(QDomNode& node)
 {
+    QDomNode diagrams = node.firstChild();
     const Settings::OptionState optionState = Settings::optionState();
     UMLDoc *umldoc = UMLApp::app()->document();
     bool totalSuccess = true;
@@ -484,9 +485,7 @@ bool UMLFolder::load(QDomElement& element)
                 QDomElement el = xtnode.toElement();
                 const QString xtag = el.tagName();
                 if (xtag == QLatin1String("diagrams")) {
-                    QDomNode diagramNode = xtnode.firstChild();
-                    if (!loadDiagramsFromXMI(diagramNode))
-                        totalSuccess = false;
+                    umldoc->addDiagramToLoad(this, xtnode);
                 } else if (xtag == QLatin1String("external_file")) {
 #if QT_VERSION >= 0x050000
                     const QString rootDir(umldoc->url().adjusted(QUrl::RemoveFilename).path());
@@ -533,6 +532,16 @@ bool UMLFolder::load(QDomElement& element)
                 uWarning() << "Unknown type of umlobject to create: " << type;
                 continue;
             }
+        }
+        // check for invalid namespaces
+        QString ns = tempElement.attribute(QLatin1String("namespace"));
+        Uml::ID::Type id = Uml::ID::fromString(ns);
+        if (id != this->id()) {
+            uError() << "namespace" << ns << "not present; ignoring object with id" << idStr;
+            delete pObject;
+            pObject = 0;
+            totalSuccess = false;
+            continue;
         }
         pObject->setUMLPackage(this);
         if (!pObject->loadFromXMI(tempElement)) {
